@@ -17,3 +17,5 @@ override_dh_auto_build:
 #	PYTHONPATH=. http_proxy='127.0.0.1:9' sphinx-build -N -bhtml        docs/ build/html # HTML generator
 #	PYTHONPATH=. http_proxy='127.0.0.1:9' sphinx-build -N -bman        docs/ build/man # Manpage generator
 
+override_dh_auto_test:
+	./dev_manage.py test
